<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="project.inf431.polytechnique.fr.cardgame.MainActivity"
    tools:showIn="@layout/activity_main"
    style="@style/AppTheme.Base">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/login_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/game_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mode_choice_radio_group">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/offline_mode" />

                <RadioButton
                    android:checked="false"
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online_mode" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/start_button"
        android:text="@string/button_start_game"
        android:onClick="startGame"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="200dp"/>

</LinearLayout>
